Fix header overlap issue in mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 /* Define CSS Variables */
@@ -58,6 +57,16 @@ header {
     font-weight: bold;
     font-family: 'Oswald', sans-serif;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    margin: 0;
+    font-size: 1.5em;
+    max-width: 80%; 
+    word-wrap: break-word;
 }
 
 /* Theme Toggle Button */
